Version 11   Live Server Fixes

--A robber's backpack contents are now discarded upon leaving the target house
  or reaching the vault.  Backpack contents are only added to the vault when a
  robber dies in the house.  Experimenting with this as a solution to the
  multi-life tool dumping loophole.





Version 11   2012-July-2

--Fixed bug in family death detection being delayed by a step, which resulted
  in several unexpected behaviors (thanks Ukuko).

--Each security tape now has a length stat (thanks Bey Bey).





Version 10  Live Server Fixes

--Fixed bug where family positions in server-side-simulation house map did not
  match actual family positions in the case of robber suicide, causing house
  check-in after suicide (if family moved at all) to fail.





Version 10   2013-June-27

--Fixed so that you can't bypass the 'Download Latest Version' message by
  logging in again (thanks Colorfusion).

--Fixed to hide map encryption key from console printout.  Made key less
  guessable buy incorporating recent mouse movement data.

--Fixed to hide Tapes button after tools transfered between vault and backpack,
  so that transfers are not lost unexpectedly by jumping to view tapes (thanks
  Matrix).

--Fixed Tapes tool tip to explain that you leave house to view tapes
  (thanks Ukuko).

--Sleeping dogs (drugged) can no longer be killed with crowbars or woken with
  water or bricks.  This increases the tactical challenge of
  killing a dog with a crowbar (because crowbar plus drugged meat is no longer
  equivalent to a gun on a lone pit bull), balancing against the crowbar's
  lower price.  Drugged meat now turns pit bulls into indestructable land
  mines.

--Tool use no longer causes mobile objects to take a step.  This increases the
  tactical effect of animal positioning (because you can no longer use a tool
  on a wall to tune how far away an animal is from you---thanks Zed).  This
  also makes pit bulls behind doors harder to deal with (opening a door with a